--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,4 +1,6 @@
 body {
+    padding: 0;
+    margin: 0;
     background-color: #f5f8ff;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
@@ -714,7 +716,7 @@ ul {
     }
 
     .mobile .hide {
-        display: none;
+        display: block;
         position: absolute;
         left: 150px;
         top: 20px;
