--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -517,7 +517,7 @@ ul {
 .my-footer {
     background-color: #04396c;
     margin-top: 20px;
-
+margin-bottom: none2;
 }
 
 .container-new {
@@ -728,10 +728,11 @@ ul {
     }
    
    .list{
-    width: 100%;
+    width: 50%;
    }
    .btn-mobile{
-    padding: 15px 30px;
+    
+    padding: 15px 25px;
     border-top-left-radius: 15px;
     border-color: #04396c;
     border: 1px solid #04396c;
@@ -900,4 +901,5 @@ ul {
     display: block;
 
 }
+
 }
